--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+
+    </header> 
+    <main>
+        <section class="container">
+            <div class="background">
+                <div class="back-color">
+                    <div class="row">
+                        <div class="col-60">
+                            <h2>ROTERDAM APARTAMENTOS</h2>
+                            <p>Apartamentos desde 68 m2 hasta 91m2, con precios desde $213.000.000, Aplica subsidio No VIS</p>
+                            <button>Separa tu cita</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+ 
+    </footer>
 </body>
 </html>
